--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -2,6 +2,19 @@
 include('components/loading') %>
 <div class="page-content">
   <!-- Questions and answers  -->
+  <div class="overlay">
+    <div class="popup">
+      <h2>Welcome Amazing guest!</h2>
+      <p>
+        Take our quiz to discover which circus character you most resemble, and
+        uncover the secret to their superpowers - their favorite superfood!
+      </p>
+      <div class="primary-btn btn">
+        Start the Quiz!
+        <div class="arrow-box"><span class="arrow">👉🏼</span></div>
+      </div>
+    </div>
+  </div>
   <div class="question-wrapper">
     <div id="questions-flex">
       <div
