--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -408,6 +408,10 @@ input[type="checkbox"] {
   display: none;
 }
 
+input[type="checkbox"] + label {
+  cursor: var(--pointer-cursor);
+}
+
 input[type="checkbox"] + label:before {
   content: "";
   display: inline-block;
@@ -420,6 +424,7 @@ input[type="checkbox"] + label:before {
   vertical-align: middle;
   text-align: center;
   line-height: 15px;
+  cursor: var(--pointer-cursor);
 }
 
 input[type="checkbox"]:checked + label:before {
