--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -29,7 +29,11 @@ include('components/loading') %>
       </div>
       <div class="question">
         <h1 id="question"></h1>
-        <img src="../public/img/unknown-character.png" alt="" />
+        <img
+          id="question-img"
+          src="../public/img/unknown-character.png"
+          alt=""
+        />
       </div>
       <div
         class="answer2 arrow-btn"
