--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -25,7 +25,7 @@
       </div>
     </div>
   </div>
-  <!-- Grid column 1 - character section  -->
+  <!-- Grid container - character section  -->
   <div class="character-content">
     <!-- Title  -->
     <div class="title">
@@ -38,29 +38,51 @@
       <img src="<%= character.image %>" alt="Character Image" />
     </div>
 
-    <!-- Superfood data -->
-    <div class="superfood-data">
-      <!-- superfood image -->
-      <img src="<%= character.superfoodImg %>" alt="Superfood Image" />
+    <!-- Superfood data 
+    <div class="superfood-data"> -->
 
-      <!-- Character & superfood names -->
-      <div class="text-data">
+      <!-- superfood image -->
+      <div class="superfood-image">
+      <img src="<%= character.superfoodImg %>" alt="Superfood Image" />
+      </div>
+
+      <!-- Character & superfood names - ADD? -->
+      <div class="superfood-reveal">
         <h1><%= character.name %></h1>
         <p>Your superfood is <%= character.superfood %></p>
       </div>
-    </div>
-  </div>
+    
 
-  <!-- Grid column 2 - Recipe link section  -->
-  <div class="recipe-content">
+    <!-- Hotspot stars for nutrition info ...
+
+    <div class="hotspots">
+
+      <img src="../public/img/hotspot-stars.png" alt="hover over stars which appear randomly for information" 
+      usemap="#hotmap" width="350px" height="350px">
+      
+      <map name="nutrition-map">
+        <area shape="circle" coords="? ? ? ?" alt ="" href= (OR JUST SHOW CARD) >
+      </map>
+    -->
+
+
+  <!-- Recipe link section arrow
+  <div class="recipe-content"> -->
     <div class="recipe-item">
       <p><%= character.superfood %> Recipes</p>
       <a href="/recipes/<%= character.superfoodId %>"
         ><img src="../public/img/this-way-right.png" alt="Recipe Arrow"
       /></a>
     </div>
+
   </div>
+
 </div>
+
+
+
+
+
 <% } %> <%}) %>
 
 <!-- <div class="page-content" id="single-character-page"> -->
