adds loading component to the character page

--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -1,5 +1,5 @@
-<%- include('components/header', { header: true }) %>
-
+<%- include('components/header', { header: true }) %> <%-
+include('components/loading') %>
 <!-- For loop to iterate characters -->
 <% characters.forEach(function(character) { %>
 
@@ -41,17 +41,16 @@
     <!-- Superfood data 
     <div class="superfood-data"> -->
 
-      <!-- superfood image -->
-      <div class="superfood-image">
+    <!-- superfood image -->
+    <div class="superfood-image">
       <img src="<%= character.superfoodImg %>" alt="Superfood Image" />
-      </div>
+    </div>
 
-      <!-- Character & superfood names - ADD? -->
-      <div class="superfood-reveal">
-        <h1><%= character.name %></h1>
-        <p>Your superfood is <%= character.superfood %></p>
-      </div>
-    
+    <!-- Character & superfood names - ADD? -->
+    <div class="superfood-reveal">
+      <h1><%= character.name %></h1>
+      <p>Your superfood is <%= character.superfood %></p>
+    </div>
 
     <!-- Hotspot stars for nutrition info ...
 
@@ -65,8 +64,7 @@
       </map>
     -->
 
-
-  <!-- Recipe link section arrow
+    <!-- Recipe link section arrow
   <div class="recipe-content"> -->
     <div class="recipe-item">
       <p><%= character.superfood %> Recipes</p>
@@ -74,14 +72,8 @@
         ><img src="../public/img/this-way-right.png" alt="Recipe Arrow"
       /></a>
     </div>
-
   </div>
-
 </div>
-
-
-
-
 
 <% } %> <%}) %>
 
