prevents vitafresh link from opening in new tab

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -78,11 +78,7 @@ include('components/loading') %>
         initiative that makes healthy living a blast! So join us today and let's
         make a change together!
       </p>
-      <a
-        class="primary-btn btn"
-        href="/vita-fresh"
-        target="_blank"
-        rel="noopener noreferrer"
+      <a class="primary-btn btn" href="/vita-fresh"
         >Visit the vitafresh site!
         <div class="arrow-box"><span class="arrow">👉🏼</span></div>
       </a>
