--- a/frontend/public/css/home.css
+++ b/frontend/public/css/home.css
@@ -148,6 +148,18 @@
   }
 }
 
+@media only screen and (max-width: 400px) {
+  #home {
+    padding-top: 20px;
+  }
+
+  .character-item,
+  #home .circle-gradient {
+    width: 100px;
+    height: 100px;
+  }
+}
+
 @media only screen and (max-width: 1000px) and (max-height: 540px) {
   #home {
     padding-top: 20px;
