--- a/frontend/public/css/quiz.css
+++ b/frontend/public/css/quiz.css
@@ -1,25 +1,38 @@
 /*  Quiz page styling */
-#questions-flex {
+#quiz-page.page-content {
+  padding-top: 80px;
+}
+
+.question-wrapper {
+  width: 100%;
+  min-height: calc(100vh - 80px);
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 50px;
+}
+
+#questions-grid {
+  display: grid;
+  max-width: 90%;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: auto auto;
   gap: 20px;
-  width: 100%;
-  margin-top: 150px;
 }
 
 .question {
-  flex-basis: 30%;
   text-align: center;
 }
 
-.question h1 {
-  margin-bottom: 20px;
-}
-
-.answer1,
-.answer2 {
-  flex-basis: 20%;
+#quiz-page h1 {
+  margin: 20px;
+  grid-column: 1/4;
+  grid-row: 1;
+  text-align: center;
 }
 
 .answer1 {
@@ -43,7 +56,6 @@
 .restart-quiz {
   width: 100%;
   text-align: center;
-  margin-top: 50px;
 }
 
 .restart-quiz a {
@@ -58,27 +70,71 @@
 
 @media only screen and (max-width: 1200px) {
   #question-img {
-    width: 100%;
+    max-width: 300px;
     height: auto;
   }
 }
 
-@media only screen and (max-width: 710px) {
-  #questions-flex {
-    flex-direction: column;
-    width: 100%;
+@media only screen and (max-width: 1100px) {
+  #quiz-page .arrow-btn img {
+    width: 180px;
+  }
+
+  #quiz-page .arrow-btn p {
+    font-size: 1em;
+  }
+
+  #quiz-page h1 {
+    font-size: 2em;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .question-wrapper {
+    min-height: calc(100vh - 280px);
+    margin: 100px 0;
+  }
+
+  #questions-grid {
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
+  }
+
+  #quiz-page h1 {
+    grid-column: 1/3;
+    grid-row: 1;
+    margin: 30px 0 0 0;
   }
 
   .question {
-    width: 75%;
+    grid-column: 1/3;
+    grid-row: 2;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  #questions-grid {
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(4, auto);
   }
 
-  .answer1,
+  .answer1 {
+    grid-column: 1/3;
+    grid-row: 3;
+    text-align: center;
+  }
+
   .answer2 {
-    width: 75%;
+    margin-top: 20px;
+    grid-column: 1/3;
+    grid-row: 4;
+    text-align: center;
   }
+}
 
-  #question-img {
-    max-width: 300px;
+@media only screen and (max-height: 730px) {
+  .question-wrapper {
+    min-height: calc(100vh - 280px);
+    margin: 100px 0;
   }
 }
