--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -1,6 +1,6 @@
 <%- include('components/header', { header: true }) %> <%-
 include('components/loading') %>
-<div class="page-content">
+<div class="page-content" id="quiz-page">
   <!-- Questions and answers  -->
   <div class="overlay">
     <div class="popup">
@@ -16,7 +16,7 @@ include('components/loading') %>
     </div>
   </div>
   <div class="question-wrapper">
-    <div id="questions-flex">
+    <div id="questions-grid">
       <div
         class="answer1 arrow-btn"
         onclick="loadQuestions(), addAnswerToList('answer-left'), calculateQuizScore()"
@@ -27,8 +27,8 @@ include('components/loading') %>
           alt="arrow pointing to the left"
         />
       </div>
+      <h1 id="question"></h1>
       <div class="question">
-        <h1 id="question"></h1>
         <img
           id="question-img"
           src="../public/img/unknown-character.png"
