changes some vita-fresh links and content

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -63,7 +63,7 @@ include('components/loading') %>
         So come on in, the circus is in town!
       </p>
 
-      <h2>The Organisation</h2>
+      <h2 id="vita-fresh">The Organisation</h2>
       <p class="about-org">
         At VitaFresh, we believe in promoting a healthy lifestyle through the
         manufacturing and selling of fresh produce. We've been spreading the
