--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -40,10 +40,7 @@
 
         <!-- Link to vitafresh -->
         <li class="link vitafresh">
-          <a
-            href="/vita-fresh"
-            >vitafresh</a
-          >
+          <a href="/#vita-fresh">vitafresh</a>
         </li>
       </ul>
 
@@ -75,10 +72,7 @@
 
           <!-- Link to vitafresh -->
           <li class="link vitafresh">
-            <a
-              href="/vita-fresh"
-              >vitafresh</a
-            >
+            <a href="/#vita-fresh">vitafresh</a>
           </li>
         </ul>
       </div>
