--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -1,5 +1,11 @@
 <%- include('components/header', { header: true }) %>
 
+<!-- Include components loading -->
+<%- include('components/loading') %> 
+
+<!-- TRY A META TAG TO DEFINE VIEWPORT AS SAME AS SCREEN SIZE?????
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+
 <!-- For loop to iterate characters -->
 <% characters.forEach(function(character) { %>
 
