--- a/frontend/views/recipe.ejs
+++ b/frontend/views/recipe.ejs
@@ -33,8 +33,8 @@ include('components/loading') %>
 
     <!-- Back button -->
     <div class="arrow-btn">
-      <a href="/recipes"
-        ><p>All Recipes</p>
+      <a href="javascript:history.back()"
+        ><p>Go Back</p>
         <img
           src="../public/img/this-way-left.png"
           alt="arrow pointing to the left"
