changes styles of popups to suit circus theme

--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -9,20 +9,24 @@
 <!-- Grid container for page layout -->
 <div class="page-content" id="character-page">
   <div class="overlay">
-    <div class="popup">
-      <h2>Psst, heres a Tip...</h2>
-      <p>
-        Click on the stars to discover the different ways the circus character
-        benefits from their superfood!
-      </p>
-      <div class="primary-btn btn">
-        Okay, Start discovering!
-        <div class="arrow-box"><span class="arrow">👉🏼</span></div>
+    <div class="popup-container">
+      <div class="popup">
+        <h2>Psst, heres a Tip...</h2>
+        <p>
+          Click on the stars to discover the different ways the circus character
+          benefits from their superfood!
+        </p>
+        <div class="primary-btn btn">
+          Okay, Start discovering!
+          <div class="arrow-box"><span class="arrow">👉🏼</span></div>
+        </div>
+        <div>
+          <input type="checkbox" id="dont-show-again" />
+          <label for="dont-show-again">Don't show again</label>
+        </div>
       </div>
-      <div>
-        <input type="checkbox" id="dont-show-again" />
-        <label for="dont-show-again">Don't show again</label>
-      </div>
+      <div class="line-background"></div>
+      <div class="line-border"></div>
     </div>
   </div>
   <!-- Grid column 1 - character section  -->
