--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -385,18 +385,63 @@ section {
   z-index: 1000;
 }
 
+.popup-container {
+  position: relative;
+}
+
 .popup {
   text-align: center;
   width: 550px;
   height: auto;
-  background: var(--background-blue);
+
   padding: 40px;
-  border-radius: 10px;
-  box-shadow: var(--base-box-shadow);
+  clip-path: polygon(
+    0 30px,
+    30px 0,
+    calc(100% - 30px) 0,
+    100% 30px,
+    100% calc(100% - 30px),
+    calc(100% - 30px) 100%,
+    30px 100%,
+    0 calc(100% - 30px)
+  );
+  border: 6px dotted var(--vita-yellow);
+  background: transparent;
 }
 
-.popup p {
-  padding: 20px 0;
+.line-border {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: var(--background-blue);
+  border: 8px solid var(--vita-purple);
+  clip-path: polygon(
+    0 30px,
+    30px 0,
+    calc(100% - 30px) 0,
+    100% 30px,
+    100% calc(100% - 30px),
+    calc(100% - 30px) 100%,
+    30px 100%,
+    0 calc(100% - 30px)
+  );
+  z-index: -1;
+}
+
+.line-background {
+  position: absolute;
+  top: -15px;
+  left: -15px;
+  right: -15px;
+  bottom: -15px;
+  background: repeating-linear-gradient(
+    -60deg,
+    var(--vita-watermelon) 0 20px,
+    #f9f2cd 0 40px
+  );
+  z-index: -2;
 }
 
 .popup .primary-btn {
@@ -434,8 +479,19 @@ input[type="checkbox"]:checked + label:before {
 }
 
 @media only screen and (max-width: 600px) {
+  .popup-container {
+    width: 80%;
+  }
+
+  .line-background {
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+  }
+
   .popup {
-    width: 90%;
+    width: 100%;
   }
 }
 
