--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -3,16 +3,21 @@ include('components/loading') %>
 <div class="page-content" id="quiz-page">
   <!-- Questions and answers  -->
   <div class="overlay">
-    <div class="popup">
-      <h2>Welcome Amazing guest!</h2>
-      <p>
-        Take our quiz to discover which circus character you most resemble, and
-        uncover the secret to their superpowers - their favorite superfood!
-      </p>
-      <div class="primary-btn btn">
-        Start the Quiz!
-        <div class="arrow-box"><span class="arrow">👉🏼</span></div>
+    <div class="popup-container">
+      <div class="popup">
+        <h2>Welcome Amazing guest!</h2>
+        <p>
+          Take our quiz to discover which circus character you most resemble,
+          and uncover the secret to their superpowers - their favorite
+          superfood!
+        </p>
+        <div class="primary-btn btn">
+          Start the Quiz!
+          <div class="arrow-box"><span class="arrow">👉🏼</span></div>
+        </div>
       </div>
+      <div class="line-background"></div>
+      <div class="line-border"></div>
     </div>
   </div>
   <div class="question-wrapper">
