--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -24,7 +24,7 @@ include('components/loading') %>
     <div id="questions-grid">
       <div
         class="answer1 arrow-btn"
-        onclick="loadQuestions(), addAnswerToList('answer-left'), calculateQuizScore()"
+        onclick="loadQuestions(), addAnswerToList('answer-left'), calculateQuizScore(), updateProgressBar()"
       >
         <p id="answer-left"></p>
         <img
@@ -42,7 +42,7 @@ include('components/loading') %>
       </div>
       <div
         class="answer2 arrow-btn"
-        onclick="loadQuestions(), addAnswerToList('answer-right'), calculateQuizScore()"
+        onclick="loadQuestions(), addAnswerToList('answer-right'), calculateQuizScore(), updateProgressBar()"
       >
         <p id="answer-right"></p>
         <img
@@ -55,6 +55,10 @@ include('components/loading') %>
     <!-- Restart button -->
     <div class="restart-quiz">
       <a href="/quiz">restart quiz</a>
+      <div class="progress">
+        <progress id="js-progressbar" value="0" max="100"></progress>
+        <span id="js-fruit" class="fruit">🍉</span>
+      </div>
     </div>
   </div>
 </div>
