--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -84,4 +84,28 @@
   <h2><%= //character.superfood %></h2>
 </div> -->
 
+<!-- Loop through superfoods data -->  
+<% superfoods.forEach(function(superfood) { %>
+
+    <!-- If id passed through is equal to id of current iterations display superfood data -->
+    <% if(id.trim() == superfood.character) { %>
+         
+          <!-- Display superfood name -->
+          <p ><%= superfood.name %></p>
+          
+          <!-- Conter for benifits -->
+          <%let count = 1; %>
+
+          <!--  Loop through benefits -->
+          <% superfood.benefits.forEach(function(benefit) { %>
+
+              <!--  Display benefits -->
+              <p><%= "Benefit " + count + ": " + benefit %> </p>
+
+              <!-- Increment benefits counter -->
+              <% count++; %>
+          <% }) %>
+    <% } %>
+<% }) %>
+
 <%- include('components/footer') %>
