--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -55,10 +55,13 @@ include('components/loading') %>
     <!-- Restart button -->
     <div class="restart-quiz">
       <a href="/quiz">restart quiz</a>
-      <div class="progress">
-        <progress id="js-progressbar" value="0" max="100"></progress>
-        <span id="js-fruit" class="fruit">🍉</span>
-      </div>
+    </div>
+  </div>
+  <!-- Progress Bar -->
+  <div class="progress-bar-wrapper">
+    <div class="progress">
+      <progress id="js-progressbar" value="0" max="100"></progress>
+      <span id="js-fruit" class="fruit">🍉</span>
     </div>
   </div>
 </div>
