makes flip-card imgs slighty big for small screens

--- a/frontend/public/css/home.css
+++ b/frontend/public/css/home.css
@@ -153,10 +153,14 @@
     padding-top: 20px;
   }
 
-  .character-item,
   #home .circle-gradient {
     width: 100px;
     height: 100px;
+  }
+
+  .character-item {
+    width: 150px;
+    height: 150px;
   }
 }
 
