--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -1,5 +1,5 @@
 <%- include('components/header', { header: true }) %> <%-
-include('components/loading') %>
+include('components/loading') %> <%- include('components/loading') %>
 <div class="page-content" id="quiz-page">
   <!-- Questions and answers  -->
   <div class="overlay">
@@ -27,6 +27,7 @@ include('components/loading') %>
       <span id="js-fruit" class="fruit">🍉</span>
     </div>
   </div>
+
   <div class="question-wrapper">
     <div id="questions-grid">
       <div
