--- a/frontend/public/css/quiz.css
+++ b/frontend/public/css/quiz.css
@@ -117,6 +117,14 @@ progress[value]::-webkit-progress-value {
   transition: left 0.5s ease-in-out;
 }
 
+/* quiz question loading animation styles */
+.quiz-loading {
+  display: none;
+  position: absolute;
+  top: 30%;
+  left: 35%;
+}
+
 @media only screen and (max-width: 1200px) {
   #question-img {
     max-width: 300px;
