--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -6,6 +6,28 @@
 <!-- If id passed through is equal to id of current iterations display character data -->
 <% if(id.trim() == character.id) { %>
 
+<svg class="star-filter">
+  <!-- filter element's code reproduced from: https://codepen.io/susan8098/pen/XOPvPR -->
+  <filter id="glow" x="-20%" y="-20%" width="150%" height="150%">
+    <!-- Blur the star / origin image input 'SourceAlpha' -->
+    <feGaussianBlur in="SourceAlpha" stdDeviation="3" result="blurred" />
+    <!-- Flood / Fill with the desired color -->
+    <feFlood flood-color="#ebf0f6" result="colored" />
+    <!-- Composite (join) the 2 above together -->
+    <feComposite
+      in="colored"
+      in2="blurred"
+      operator="in"
+      result="softGlow_colored"
+    />
+
+    <feMerge>
+      <feMergeNode in="softGlow_colored" />
+      <feMergeNode in="SourceGraphic" />
+    </feMerge>
+  </filter>
+</svg>
+
 <!-- Grid container for page layout -->
 <div class="page-content" id="character-page">
   <div class="overlay">
@@ -29,6 +51,7 @@
       <div class="line-border"></div>
     </div>
   </div>
+
   <!-- Grid column 1 - character section  -->
   <div class="character-content">
     <!-- Title  -->
@@ -104,6 +127,8 @@
   <div class="benefit-dialog">
     <!--  Display benefits -->
     <p><%= "Benefit " + count + ": " + benefit %></p>
+
+    <div class="close-benefit-btn">Close</div>
   </div>
 </div>
 
