makes hotspot stars a little transparent

--- a/frontend/views/character.ejs
+++ b/frontend/views/character.ejs
@@ -113,10 +113,7 @@
 <!-- If id passed through is equal to id of current iterations display superfood data -->
 <% if(id.trim() == superfood.character) { %>
 
-<!-- Display superfood name -->
-<p><%= superfood.name %></p>
-
-<!-- Conter for benifits -->
+<!-- Conter for benefits -->
 <%let count = 1; %>
 
 <!--  Loop through benefits -->
