--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -39,6 +39,11 @@ h2 {
   color: var(--vita-yellow);
 }
 
+h3 {
+  text-transform: uppercase;
+  font-size: 1.4em;
+}
+
 /* Links and Buttons */
 a {
   text-transform: uppercase;
