--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -87,6 +87,16 @@ a:hover {
   }
 }
 
+@media only screen and (max-width: 1200px) {
+  .arrow-btn img {
+    width: 180px;
+  }
+
+  .arrow-btn p {
+    font-size: 1em;
+  }
+}
+
 /* Primary button styles inspired by and re-produced from: https://codepen.io/kocsten/pen/rggjXp 
 and: https://codepen.io/foxeisen/pen/bqZxLa  */
 .primary-btn {
