--- a/frontend/views/components/star.ejs
+++ b/frontend/views/components/star.ejs
@@ -1,5 +1,5 @@
 <!-- Code reproduced from: https://codepen.io/susan8098/pen/XOPvPR -->
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="-15 -15 50 50">
+<svg class="star-svg" xmlns="http://www.w3.org/2000/svg" viewBox="-5 -5 34 34">
   <path
     class="star1"
     d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"
